# pysibeliusdark

./: README.md  pyproject.toml
plots_from_paper/figure_4_rho_vs_r/: plot_rho_r.py  sibelius_dark_1.txt  sibelius_dark_1_cumulative.txt
src/pysibeliusdark/: __init__.py  galform.py  sibelius_functions.py
todo/: hbt.py  test.py  test_sfr.py  velociraptor.py
